--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "doc:dev": "styleguidist server",
     "doc:build": "styleguidist build",
     "doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "#snyk-protect": "snyk protect",
+    "#prepare": "npm run snyk-protect"
   },
   "files": [
     "/dist",
@@ -69,8 +69,7 @@
   },
   "dependencies": {
     "immer": "^7.0.7",
-    "styled-components": "^5.1.1",
-    "snyk": "^1.373.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
@@ -80,7 +79,7 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "@commitlint/cli": "^9.1.1",
+    "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.1",
     "@rollup/plugin-replace": "^2.3.3",
     "@semantic-release/changelog": "^5.0.1",
@@ -129,6 +128,7 @@
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-terser": "^7.0.0",
     "semantic-release": "^17.1.1",
+    "snyk": "^1.373.0",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^3.0.0",
